working, added jinja2 and twig support